# gitstar

./: README.md  pyproject.toml  taskfile.yaml
gitstar/: test.py
